--- a/views/adhesivelabels.ejs
+++ b/views/adhesivelabels.ejs
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="https://sdblabel.com/productpic/9731.jpg">
+        <img src="img/adhesive1.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BARCODE LABELS</h2>
@@ -34,7 +34,7 @@
         <p>6. Water Proof </p>
       </div>
       <div class="col-sm-4 text-center wow fadeInRight" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="https://sdblabel.com/productpic/9731.jpg">
+        <img src="img/adhesive2.png">
       </div>
     </div>
   </div>
@@ -43,7 +43,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="https://sdblabel.com/productpic/9731.jpg">
+        <img src="img/adhesive3.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BARCODE LABELS</h2>
