--- a/views/barcodelabels.ejs
+++ b/views/barcodelabels.ejs
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="https://sdblabel.com/productpic/9731.jpg">
+        <img src="img/blabel1.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BARCODE LABELS</h2>
@@ -34,7 +34,7 @@
         <p>6. Water Proof </p>
       </div>
       <div class="col-sm-4 text-center wow fadeInRight" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="https://sdblabel.com/productpic/9731.jpg">
+        <img src="img/blabel2.png">
       </div>
     </div>
   </div>
@@ -43,7 +43,47 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="https://sdblabel.com/productpic/9731.jpg">
+        <img src="img/blabel3.png">
+      </div>
+      <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
+        <h2>BARCODE LABELS</h2>
+        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
+        <h3>Features:</h3>
+        <p>1. Easy To Use </p>
+        <p>2. Fine Finish </p>
+        <p>3. Lightweight </p>
+        <p>4. Attractive Pattern </p>
+        <p>5. Different Sizes Available</p>
+        <p>6. Water Proof </p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="product-item">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-sm-8 wow fadeInLeft p-item" style="visibility: visible; animation-name: fadeInRight;">
+        <h2>BARCODE LABELS</h2>
+        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
+        <h3>Features:</h3>
+        <p>1. Easy To Use </p>
+        <p>2. Fine Finish </p>
+        <p>3. Lightweight </p>
+        <p>4. Attractive Pattern </p>
+        <p>5. Different Sizes Available</p>
+        <p>6. Water Proof </p>
+      </div>
+      <div class="col-sm-4 text-center wow fadeInRight" style="visibility: visible; animation-name: fadeInLeft;">
+        <img src="img/blabel4.png">
+      </div>
+    </div>
+  </div>
+</div>
+<div class="product-item" style="background-color:#f7f7f7">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
+        <img src="img/blabel5.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BARCODE LABELS</h2>
