--- a/views/scannersoftware.ejs
+++ b/views/scannersoftware.ejs
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="https://sdblabel.com/productpic/9731.jpg">
+        <img src="img/SWS.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BARCODE LABELS</h2>
@@ -19,7 +19,7 @@
     </div>
   </div>
 </div>
-<div class="product-item">
+<!-- <div class="product-item">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-8 wow fadeInLeft p-item" style="visibility: visible; animation-name: fadeInRight;">
@@ -58,5 +58,5 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <%- include("footer") -%>
