--- a/views/taglabels.ejs
+++ b/views/taglabels.ejs
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="https://sdblabel.com/productpic/9731.jpg">
+        <img src="img/tag1.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BARCODE LABELS</h2>
@@ -34,12 +34,12 @@
         <p>6. Water Proof </p>
       </div>
       <div class="col-sm-4 text-center wow fadeInRight" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="https://sdblabel.com/productpic/9731.jpg">
+        <img src="img/tag2.png">
       </div>
     </div>
   </div>
 </div>
-<div class="product-item" style="background-color:#f7f7f7">
+<!-- <div class="product-item" style="background-color:#f7f7f7">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
@@ -58,5 +58,5 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <%- include("footer") -%>
