--- a/views/header.ejs
+++ b/views/header.ejs
@@ -73,7 +73,7 @@
 			<div class="container-fluid">
 				<!-- <a href="index.html" class="navbar-brand"></a> -->
 				<!-- <img src="img/111.png" alt=""> -->
-				<img src="img/LOGOGOO(1).png" alt="">
+				<img src="img/LOGO (1).png" alt="">
 				<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
 					<span class="navbar-toggler-icon"></span>
 				</button>
