--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,24 +9,24 @@
 						<!-- <div class="single-testimonial">
 						<div class="slider-img-2"><img src="Home-Page-Top-1.png"></div>
 					</div> -->
-						<div class="single-testimonial ">
+						<!-- <div class="single-testimonial ">
 							<div class="slider-img-2"><img class="wow fadeIn" src="img/top1.png"></div>
-						</div>
+						</div> -->
 						<div class="single-testimonial ">
 							<div class="slider-img-2"><img img class="wow fadeIn" src="img/top2.png"></div>
 						</div>
-						<div class="single-testimonial ">
+						<!-- <div class="single-testimonial ">
 							<div class="slider-img-2"><img src="img/top3.png"></div>
-						</div>
+						</div> -->
 						<div class="single-testimonial ">
 							<div class="slider-img-2"><img src="img/top4.png"></div>
 						</div>
-						<div class="single-testimonial ">
+						<!-- <div class="single-testimonial ">
 							<div class="slider-img-2"><img src="img/top5.png"></div>
-						</div>
-						<div class="single-testimonial ">
+						</div> -->
+						<!-- <div class="single-testimonial ">
 							<div class="slider-img-2"><img src="img/top6.png"></div>
-						</div>
+						</div> -->
 
 					</div>
 				</div>
@@ -121,7 +121,7 @@
 	<section id="work_outer">
 		<div class="top_cont_latest">
 			<div class="container">
-				<h2>Consumable Products</h2>
+				<h2>SOME OF OUR PRODUCTS</h2>
 				<div class="tab-content wow fadeInUp">
 					<div id="multivendor" class="container tab-pane active">
 						<div class="">
@@ -131,26 +131,50 @@
 										<div class="single-testimonial">
 											<div class="slider-img"><img src="img/1.png"></div>
 										</div>
+										<div class="single-testimonial">
+											<div class="slider-img"><img src="img/p1.png"></div>
+										</div>
 										<div class="single-testimonial ">
 											<div class="slider-img"><img src="img/2.png"></div>
+										</div>
+										<div class="single-testimonial">
+											<div class="slider-img"><img src="img/p2.png"></div>
 										</div>
 										<div class="single-testimonial ">
 											<div class="slider-img"><img src="img/3.png"></div>
 										</div>
+										<div class="single-testimonial">
+											<div class="slider-img"><img src="img/p3.png"></div>
+										</div>
 										<div class="single-testimonial ">
 											<div class="slider-img"><img src="img/4.png"></div>
+										</div>
+										<div class="single-testimonial">
+											<div class="slider-img"><img src="img/p4.png"></div>
 										</div>
 										<div class="single-testimonial ">
 											<div class="slider-img"><img src="img/5.png"></div>
 										</div>
+										<div class="single-testimonial">
+											<div class="slider-img"><img src="img/p5.png"></div>
+										</div>
 										<div class="single-testimonial ">
 											<div class="slider-img"><img src="img/6.png"></div>
+										</div>
+										<div class="single-testimonial">
+											<div class="slider-img"><img src="img/p6.png"></div>
 										</div>
 										<div class="single-testimonial ">
 											<div class="slider-img"><img src="img/7.png"></div>
 										</div>
+										<div class="single-testimonial">
+											<div class="slider-img"><img src="img/p7.png"></div>
+										</div>
 										<div class="single-testimonial ">
 											<div class="slider-img"><img src="img/orange.png"></div>
+										</div>
+										<div class="single-testimonial">
+											<div class="slider-img"><img src="img/p8.png"></div>
 										</div>
 										<div class="single-testimonial ">
 											<div class="slider-img"><img src="img/9.png"></div>
@@ -158,9 +182,9 @@
 										<div class="single-testimonial ">
 											<div class="slider-img"><img src="img/10.png"></div>
 										</div>
-										<div class="single-testimonial ">
+										<!-- <div class="single-testimonial ">
 											<div class="slider-img"><img src="img/11.png"></div>
-										</div>
+										</div> -->
 										<div class="single-testimonial ">
 											<div class="slider-img"><img src="img/12.png"></div>
 										</div>
@@ -173,7 +197,7 @@
 				</div>
 	</section>
 
-	<section id="work_outer_1">
+	<!-- <section id="work_outer_1">
 		<div class="top_cont_latest">
 			<div class="container">
 				<h2>Hardware Products</h2>
@@ -218,7 +242,7 @@
 
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!--main-section-end-->
 
 
