--- a/views/header.ejs
+++ b/views/header.ejs
@@ -81,13 +81,13 @@
 				<div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
-							<a href="#home" class="nav-item nav-link active">Home</a>
+							<a href="/" class="nav-item nav-link active">Home</a>
 						</li>
 						<li class="nav-item">
-							<a href="#about_us" class="nav-item nav-link">About Us</a>
+							<a href="/#about_us" class="nav-item nav-link">About Us</a>
 						</li>
 						<li class="nav-item">
-							<a href="#service" class="nav-item nav-link">Services</a>
+							<a href="/#service" class="nav-item nav-link">Services</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -117,7 +117,7 @@
 						</li>
 
 						<li class="nav-item">
-							<a href="#contact" class="nav-item nav-link">Contact</a>
+							<a href="/#contact" class="nav-item nav-link">Contact</a>
 						</li>
 					</ul>
 				</div>
