--- a/views/main.ejs
+++ b/views/main.ejs
@@ -13,7 +13,7 @@
 							<div class="slider-img-2"><img class="wow fadeIn" src="img/top1.png"></div>
 						</div> -->
 						<div class="single-testimonial ">
-							<div class="slider-img-2"><img img class="wow fadeIn" src="img/top2.png"></div>
+							<div class="slider-img-2"><img class="wow fadeIn" src="img/top2.png"></div>
 						</div>
 						<!-- <div class="single-testimonial ">
 							<div class="slider-img-2"><img src="img/top3.png"></div>
@@ -122,71 +122,71 @@
 		<div class="top_cont_latest">
 			<div class="container">
 				<h2>SOME OF OUR PRODUCTS</h2>
-				<div class="tab-content wow fadeInUp">
+				<div class="tab-content">
 					<div id="multivendor" class="container tab-pane active">
 						<div class="">
 							<div class="app-screen">
 								<div class="container" style="padding-top:80px; padding-bottom:80px;">
 									<div class="owl-carousel testimonial-carousel">
 										<div class="single-testimonial">
-											<div class="slider-img"><img src="img/1.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/1.png"></div>
 										</div>
 										<div class="single-testimonial">
-											<div class="slider-img"><img src="img/p1.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/p1.png"></div>
 										</div>
 										<div class="single-testimonial ">
-											<div class="slider-img"><img src="img/2.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/2.png"></div>
 										</div>
 										<div class="single-testimonial">
-											<div class="slider-img"><img src="img/p2.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/p2.png"></div>
 										</div>
 										<div class="single-testimonial ">
-											<div class="slider-img"><img src="img/3.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/3.png"></div>
 										</div>
 										<div class="single-testimonial">
-											<div class="slider-img"><img src="img/p3.png"></div>
+											<div class="slider-img"><img  class="wow zoomIn" src="img/p3.png"></div>
 										</div>
 										<div class="single-testimonial ">
-											<div class="slider-img"><img src="img/4.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/4.png"></div>
 										</div>
 										<div class="single-testimonial">
-											<div class="slider-img"><img src="img/p4.png"></div>
+											<div class="slider-img"><img  class="wow zoomIn" src="img/p4.png"></div>
 										</div>
 										<div class="single-testimonial ">
-											<div class="slider-img"><img src="img/5.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/5.png"></div>
 										</div>
 										<div class="single-testimonial">
-											<div class="slider-img"><img src="img/p5.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/p5.png"></div>
 										</div>
 										<div class="single-testimonial ">
-											<div class="slider-img"><img src="img/6.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/6.png"></div>
 										</div>
 										<div class="single-testimonial">
-											<div class="slider-img"><img src="img/p6.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/p6.png"></div>
 										</div>
 										<div class="single-testimonial ">
-											<div class="slider-img"><img src="img/7.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/7.png"></div>
 										</div>
 										<div class="single-testimonial">
-											<div class="slider-img"><img src="img/p7.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/p7.png"></div>
 										</div>
 										<div class="single-testimonial ">
-											<div class="slider-img"><img src="img/orange.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/orange.png"></div>
 										</div>
 										<div class="single-testimonial">
-											<div class="slider-img"><img src="img/p8.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/p8.png"></div>
 										</div>
 										<div class="single-testimonial ">
-											<div class="slider-img"><img src="img/9.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/9.png"></div>
 										</div>
 										<div class="single-testimonial ">
-											<div class="slider-img"><img src="img/10.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/10.png"></div>
 										</div>
 										<!-- <div class="single-testimonial ">
 											<div class="slider-img"><img src="img/11.png"></div>
 										</div> -->
 										<div class="single-testimonial ">
-											<div class="slider-img"><img src="img/12.png"></div>
+											<div class="slider-img"><img class="wow zoomIn" src="img/12.png"></div>
 										</div>
 
 									</div>
