--- a/views/barcodelabels.ejs
+++ b/views/barcodelabels.ejs
@@ -1,4 +1,6 @@
 <%- include("header") -%>
+<img src="img/BANNER.png" alt=""><br><br>
+<h2>BARCODE LABELS</h2>
 <div class="product-item" style="background-color:#f7f7f7">
   <div class="container">
     <div class="row align-items-center">
