--- a/views/barcodescanners.ejs
+++ b/views/barcodescanners.ejs
@@ -1,4 +1,6 @@
 <%- include("header") -%>
+<img src="img/BANNER.png" alt=""><br><br>
+<h2>BARCODE SCANNERS</h2>
 <div class="product-item" style="background-color:#f7f7f7">
   <div class="container">
     <div class="row align-items-center">
@@ -6,7 +8,7 @@
         <img src="img/bscanner1.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
-        <h2>BARCODE LABELS</h2>
+        <h2>BARCODE SCANNERS</h2>
         <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
         <h3>Features:</h3>
         <p>1. Easy To Use </p>
