--- a/views/barcodelabels.ejs
+++ b/views/barcodelabels.ejs
@@ -17,6 +17,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
+        <button type="button" class="btn btn-outline-success btn-lg" style="">Send An Enquiry</button>
       </div>
     </div>
   </div>
