--- a/views/thermalribbons.ejs
+++ b/views/thermalribbons.ejs
@@ -17,6 +17,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
+        <button type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button>
       </div>
     </div>
   </div>
@@ -24,7 +25,10 @@
 <div class="product-item">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-sm-8 wow fadeInLeft p-item" style="visibility: visible; animation-name: fadeInRight;">
+      <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
+        <img src="img/tribbon2.png">
+      </div>
+      <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BARCODE LABELS</h2>
         <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
         <h3>Features:</h3>
@@ -34,10 +38,10 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
+        <button type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button>
+
       </div>
-      <div class="col-sm-4 text-center wow fadeInRight" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/tribbon2.png">
-      </div>
+
     </div>
   </div>
 </div>
