--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1437,3 +1437,8 @@ a.contact_btn:hover{
   font-weight: 700;
   margin: 35px 0 25px 0;
 }
+.btn-enq{
+  position: absolute;
+  right: 0;
+  margin-right:20px;
+}
