--- a/views/hololabels.ejs
+++ b/views/hololabels.ejs
@@ -17,6 +17,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
+        <button type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button>
       </div>
     </div>
   </div>
