--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,24 +9,24 @@
 						<!-- <div class="single-testimonial">
 						<div class="slider-img-2"><img src="Home-Page-Top-1.png"></div>
 					</div> -->
-						<!-- <div class="single-testimonial ">
+						<div class="single-testimonial ">
 							<div class="slider-img-2"><img class="wow fadeIn" src="img/top1.png"></div>
-						</div> -->
+						</div>
 						<div class="single-testimonial ">
 							<div class="slider-img-2"><img class="wow fadeIn" src="img/top2.png"></div>
 						</div>
-						<!-- <div class="single-testimonial ">
+						<div class="single-testimonial ">
 							<div class="slider-img-2"><img src="img/top3.png"></div>
-						</div> -->
+						</div>
 						<div class="single-testimonial ">
 							<div class="slider-img-2"><img src="img/top4.png"></div>
 						</div>
-						<!-- <div class="single-testimonial ">
+						<div class="single-testimonial ">
 							<div class="slider-img-2"><img src="img/top5.png"></div>
-						</div> -->
-						<!-- <div class="single-testimonial ">
+						</div>
+						<div class="single-testimonial ">
 							<div class="slider-img-2"><img src="img/top6.png"></div>
-						</div> -->
+						</div>
 
 					</div>
 				</div>
