--- a/views/thermalribbons.ejs
+++ b/views/thermalribbons.ejs
@@ -17,7 +17,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
-        <button type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button>
+        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
   </div>
@@ -38,7 +38,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
-        <button type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button>
+        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
 
       </div>
 
