--- a/views/barcodelabels.ejs
+++ b/views/barcodelabels.ejs
@@ -17,7 +17,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
-        <button type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button>
+        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
   </div>
@@ -39,7 +39,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
-        <button type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button>
+        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
 
       </div>
     </div>
@@ -61,7 +61,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
-        <button type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button>
+        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
 
       </div>
     </div>
@@ -83,7 +83,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
-        <button type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button>
+        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
 
     </div>
@@ -105,7 +105,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
-        <button type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button>
+        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
 
       </div>
     </div>
