--- a/views/barcodelabels.ejs
+++ b/views/barcodelabels.ejs
@@ -17,6 +17,11 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
+        <h3>Available:</h3>
+        <p>1. 2/1 Inch </p>
+        <p>2. 4/6 Inch </p>
+        <p>3. 3/1.5 Inch </p>
+        <p>4. 4/1.5 Inch And Many More </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
@@ -105,6 +110,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <p>6. Water Proof </p>
+
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
 
       </div>
