--- a/views/hololabels.ejs
+++ b/views/hololabels.ejs
@@ -11,7 +11,7 @@
         <h2>HOLOGRAM LABELS</h2>
         <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
         <h3>Features:</h3>
-        <p>1. Easy To Use </p>
+        <p>1. Beautiful Design </p>
         <p>2. Fine Finish </p>
         <p>3. Lightweight </p>
         <p>4. Attractive Pattern </p>
