--- a/views/adhesivelabels.ejs
+++ b/views/adhesivelabels.ejs
@@ -5,18 +5,23 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/adhesive1.png">
+        <img src="img/adhesive2.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>ADHESIVE LABELS</h2>
-        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Adhesive Labels In The Nation. These Labels Are Designed Using Only High Quality Components.  </p>
         <h3>Features:</h3>
-        <p>1. Easy To Use </p>
+        <p>1. Long Lasting </p>
         <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
-        <p>4. Attractive Pattern </p>
-        <p>5. Different Sizes Available</p>
+        <p>3. Various Size </p>
+        <p>4. Printed </p>
+        <p>5. Easy To Use</p>
         <p>6. Water Proof </p>
+        <h3>Available:</h3>
+        <p>1. 2/1 Inch </p>
+        <p>2. 4/6 Inch </p>
+        <p>3. 3/1.5 Inch </p>
+        <p>4. 4/1.5 Inch And Many More. </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
@@ -26,18 +31,15 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/adhesive2.png">
+        <img src="img/adhesive1.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
-        <h2>BARCODE LABELS</h2>
-        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
+        <h2>ADHESIVE PLAIN LABELS</h2>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Adhesive Labels In The Nation. These Labels Are Designed Using Only High Quality Components.  </p>
         <h3>Features:</h3>
-        <p>1. Easy To Use </p>
+        <p>1. Long Lasting </p>
         <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
-        <p>4. Attractive Pattern </p>
-        <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <p>3. Various Size </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
 
@@ -51,15 +53,12 @@
         <img src="img/adhesive3.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
-        <h2>BARCODE LABELS</h2>
-        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
+        <h2>ADHESIVE PLAIN LABELS</h2>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Adhesive Labels In The Nation. These Labels Are Designed Using Only High Quality Components.  </p>
         <h3>Features:</h3>
-        <p>1. Easy To Use </p>
+        <p>1. Long Lasting </p>
         <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
-        <p>4. Attractive Pattern </p>
-        <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <p>3. Various Size </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
 
       </div>
