--- a/views/barcodeprinters.ejs
+++ b/views/barcodeprinters.ejs
@@ -9,14 +9,14 @@
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BARCODE PRINTERS</h2>
-        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Barcode Printers In The Nation. These Products Are Highly Demanded In The Market For Their High Performance Features. </p>
         <h3>Features:</h3>
-        <p>1. Easy To Use </p>
-        <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
-        <p>4. Attractive Pattern </p>
-        <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <p>1. Long Lasting </p>
+        <p>2. Easy Installation </p>
+        <p>3. Glossy Smooth Surface </p>
+        <p>4. High Speed </p>
+        <p>5. Clear Print</p>
+        <p>6. Attractive Pattern </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
@@ -29,15 +29,15 @@
         <img src="img/bprinter2.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
-        <h2>BARCODE LABELS</h2>
-        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
+        <h2>BARCODE PRINTERS</h2>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Barcode Printers In The Nation. These Products Are Highly Demanded In The Market For Their High Performance Features. </p>
         <h3>Features:</h3>
-        <p>1. Easy To Use </p>
-        <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
-        <p>4. Attractive Pattern </p>
-        <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <p>1. Long Lasting </p>
+        <p>2. Easy Installation </p>
+        <p>3. Glossy Smooth Surface </p>
+        <p>4. High Speed </p>
+        <p>5. Clear Print</p>
+        <p>6. Attractive Pattern </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
@@ -50,15 +50,15 @@
         <img src="img/bprinter3.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
-        <h2>BARCODE LABELS</h2>
-        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
+        <h2>BARCODE PRINTERS</h2>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Barcode Printers In The Nation. These Products Are Highly Demanded In The Market For Their High Performance Features. </p>
         <h3>Features:</h3>
-        <p>1. Easy To Use </p>
-        <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
-        <p>4. Attractive Pattern </p>
-        <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <p>1. Long Lasting </p>
+        <p>2. Easy Installation </p>
+        <p>3. Glossy Smooth Surface </p>
+        <p>4. High Speed </p>
+        <p>5. Clear Print</p>
+        <p>6. Attractive Pattern </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
