--- a/views/billingprinters.ejs
+++ b/views/billingprinters.ejs
@@ -9,14 +9,7 @@
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BILLING PRINTERS</h2>
-        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
-        <h3>Features:</h3>
-        <p>1. Easy To Use </p>
-        <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
-        <p>4. Attractive Pattern </p>
-        <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <h3>EPSON</h3>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
@@ -29,15 +22,8 @@
         <img src="img/billing2.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
-        <h2>BARCODE LABELS</h2>
-        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
-        <h3>Features:</h3>
-        <p>1. Easy To Use </p>
-        <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
-        <p>4. Attractive Pattern </p>
-        <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <h2>BILLING PRINTERS</h2>
+        <h3>HEYDEY</h3>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
@@ -50,15 +36,8 @@
         <img src="img/billing3.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
-        <h2>BARCODE LABELS</h2>
-        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
-        <h3>Features:</h3>
-        <p>1. Easy To Use </p>
-        <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
-        <p>4. Attractive Pattern </p>
-        <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <h2>BILLING PRINTERS</h2>
+        <h3>CITIZEN</h3>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
