--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -43,10 +43,15 @@
 					</div>
 					<div class="col-lg-6 wow fadeInUp delay-06s">
 						<div class="form">
-							<input class="input-text animated wow flipInY delay-02s" type="text" name="" value="Your Name *" onFocus="if(this.value==this.defaultValue)this.value='';" onBlur="if(this.value=='')this.value=this.defaultValue;">
-							<input class="input-text animated wow flipInY delay-04s" type="text" name="" value="Your E-mail *" onFocus="if(this.value==this.defaultValue)this.value='';" onBlur="if(this.value=='')this.value=this.defaultValue;">
-							<textarea class="input-text text-area animated wow flipInY delay-06s" cols="0" rows="0" onFocus="if(this.value==this.defaultValue)this.value='';" onBlur="if(this.value=='')this.value=this.defaultValue;">Your Message *</textarea>
-							<input class="input-btn animated wow flipInY delay-08s" type="submit" value="send message">
+							<form class="" action="https://formsubmit.co/divy.j.140900@gmail.com" method="POST">
+
+
+								<input class="input-text animated wow flipInY delay-02s" type="text" name="Name" value="Your Name *" onFocus="if(this.value==this.defaultValue)this.value='';" onBlur="if(this.value=='')this.value=this.defaultValue;">
+								<input class="input-text animated wow flipInY delay-04s" type="text" name="E-mail" value="Your E-mail *" onFocus="if(this.value==this.defaultValue)this.value='';" onBlur="if(this.value=='')this.value=this.defaultValue;">
+								<textarea class="input-text text-area animated wow flipInY delay-06s" name="Message" cols="0" rows="0" onFocus="if(this.value==this.defaultValue)this.value='';" onBlur="if(this.value=='')this.value=this.defaultValue;">Your Message *</textarea>
+								<!-- <input type="hidden" name="_next" value="/#contact"> -->
+								<input class="input-btn animated wow flipInY delay-08s" type="submit" value="send message">
+							</form>
 						</div>
 					</div>
 				</div>
