--- a/views/main.ejs
+++ b/views/main.ejs
@@ -39,11 +39,12 @@
 	<section id="about_us">
 		<div class="container">
 			<h2>About Us</h2>
+			<hr width="250px">
 			<div class="service_area">
 				<center>
-					<p style="font-size: 1.3vw; word-spacing: 1vw;">Growing demand of Self Adhesive Stickers and their fast growth encouraged us to enter in barcode sticker manufacturing industries. Our prime focus is Quality and customer satisfaction .
+					<p style="font-size: 1.3vw; word-spacing: 1vw;">Growing demand of Self Adhesive Stickers and their fast growth encouraged us to enter in barcode sticker, product labels and promotional labels manufacturing industries. Our prime focus is Quality and customer satisfaction .
 						Therefore , we as a barcode sticker manufacturer offer a wide range of superb barcode stickers, Barcode Printers, Thermal Transfer Ribbon. Founded with an aim to offer the superior quality products and services, we leave no stone unturned
-						towards assuring the same. We have earned a respectable name for ourselves as a barcode sticker Manufacturer. Further, we make full efforts to maintain a large inventory for our products so that we are able to serve the requirements of
+						towards assuring the same. We have earned a respectable name for ourselves as a barcode sticker and product labels Manufacturer. Further, we make full efforts to maintain a large inventory for our products so that we are able to serve the requirements of
 						our clients at any given frame of time.</p>
 				</center>
 				<br>
