--- a/views/scannerhardware.ejs
+++ b/views/scannerhardware.ejs
@@ -9,14 +9,14 @@
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>SCANNER WITH HARDWARE</h2>
-        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
+        <p class="text-justify">Our Organization Is Passionately Engaged In Offering An Exclusive Array Of Scanner With Hardware To The Customers. These Products Are Made From High Quality Components. </p>
         <h3>Features:</h3>
-        <p>1. Easy To Use </p>
+        <p>1. Beautiful Design </p>
         <p>2. Fine Finish </p>
         <p>3. Lightweight </p>
-        <p>4. Attractive Pattern </p>
+        <p>4. Easy To Use </p>
         <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <p>6. High Performance </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
