--- a/views/main.ejs
+++ b/views/main.ejs
@@ -64,7 +64,7 @@
 		</div>
 	</section>
 	<!--Service-->
-	<section id="service">
+	<section id="service" style="background:#f7f7f7">
 		<div class="container">
 			<h2>Services</h2>
 			<div class="service_area">
