--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,12 @@
 /* CSS Document */
 
 /* Float Elements
+
 ---------------------------------*/
+@font-face {
+   font-family: Dosis;
+   src: url(dosis-bold.woff);
+}
 .fl-lt {float:left;}
 .fl-rt {float:right;}
 
