--- a/views/main.ejs
+++ b/views/main.ejs
@@ -42,22 +42,22 @@
 			<hr width="250px">
 			<div class="service_area">
 				<center>
-					<p style="font-size: 1.3vw; word-spacing: 1vw;">Growing demand of Self Adhesive Stickers and their fast growth encouraged us to enter in barcode sticker, product labels and promotional labels manufacturing industries. Our prime focus is Quality and customer satisfaction .
+					<p style=" word-spacing: 1vw;">Growing demand of Self Adhesive Stickers and their fast growth encouraged us to enter in barcode sticker, product labels and promotional labels manufacturing industries. Our prime focus is Quality and customer satisfaction .
 						Therefore , we as a barcode sticker manufacturer offer a wide range of superb barcode stickers, Barcode Printers, Thermal Transfer Ribbon. Founded with an aim to offer the superior quality products and services, we leave no stone unturned
 						towards assuring the same. We have earned a respectable name for ourselves as a barcode sticker and product labels Manufacturer. Further, we make full efforts to maintain a large inventory for our products so that we are able to serve the requirements of
 						our clients at any given frame of time.</p>
 				</center>
 				<br>
 				<center>
-					<p style="font-size: 1.3vw; word-spacing: 1vw;">We Are Backed With The Modern Infrastructural Setup For Manufacturing Our Offered Range Of Products. We Have Hired A Team Of Highly Skilled Professionals, Who Are Carefully Appointed By
+					<p style=" word-spacing: 1vw;">We Are Backed With The Modern Infrastructural Setup For Manufacturing Our Offered Range Of Products. We Have Hired A Team Of Highly Skilled Professionals, Who Are Carefully Appointed By
 						Keeping In Mind Their Knowledge In Their Respective Domains. Owing To The Better Quality Of Our Products And Customized Range, We Have Been Able To Earn High-Level Client Satisfaction. Our Expertise Conducting Various Research &
 						Development Activities Assists Us In Further Increase Our Technical Excellence. Moreover, We Are Backed By A Wide Connected Network For Delivering The Offered Products Safely At Clients End.</p><br>
 				</center>
 				<center><br>
-					<h2 style="font-size: 1.9vw;">Why Us?</h2>
+					<h2 style="font-size:24px;">Why Us?</h2>
 				</center>
 				<center>
-					<p style="font-size: 1.3vw; word-spacing: 1vw;">By Providing Our Customers With Unmatched Quality Barcode Labels And Printers, We Always Believe In Making A Long-Term Relationship With Our Respected Customers. Our Wide Distribution Network
+					<p style="word-spacing: 1vw;">By Providing Our Customers With Unmatched Quality Barcode Labels And Printers, We Always Believe In Making A Long-Term Relationship With Our Respected Customers. Our Wide Distribution Network
 						Helped Us In Dispatching The Offered Products At The Patrons End Within The Committed Frame Of Time. We Offer Our Customers Different Options Of Payment Such As Cash, Online, DD And Credit Card.</p>
 				</center>
 			</div>
