--- a/views/barcodelabels.ejs
+++ b/views/barcodelabels.ejs
@@ -13,10 +13,10 @@
         <h3>Features:</h3>
         <p>1. Easy To Use </p>
         <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
+        <!-- <p>3. Lightweight </p> -->
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <!-- <p>6. Water Proof </p> -->
         <h3>Available:</h3>
         <p>1. 2/1 Inch </p>
         <p>2. 4/6 Inch </p>
@@ -40,10 +40,10 @@
         <h3>Features:</h3>
         <p>1. Easy To Use </p>
         <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
+        <!-- <p>3. Lightweight </p> -->
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <!-- <p>6. Water Proof </p> -->
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
 
       </div>
@@ -62,10 +62,10 @@
         <h3>Features:</h3>
         <p>1. Easy To Use </p>
         <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
+        <!-- <p>3. Lightweight </p> -->
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <!-- <p>6. Water Proof </p> -->
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
 
       </div>
@@ -84,10 +84,10 @@
         <h3>Features:</h3>
         <p>1. Easy To Use </p>
         <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
+        <!-- <p>3. Lightweight </p> -->
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <!-- <p>6. Water Proof </p> -->
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
 
@@ -106,10 +106,10 @@
         <h3>Features:</h3>
         <p>1. Easy To Use </p>
         <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
+        <!-- <p>3. Lightweight </p> -->
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <!-- <p>6. Water Proof </p> -->
 
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
 
