--- a/views/barcodescanners.ejs
+++ b/views/barcodescanners.ejs
@@ -11,7 +11,7 @@
         <h2>BARCODE SCANNERS</h2>
         <p class="text-justify">We Are One Of The Best Organizations In The Market, Involved In Offering A Wide Collection Of Barcode Scanners To The Customers At Vary Reasonable Prices. </p>
         <h3>Features:</h3>
-        <p>1. Light Weight </p>
+        <!-- <p>1. Light Weight </p> -->
         <p>2. Low Maintainance </p>
         <p>3. Easy To Use </p>
         <p>4. High Performance </p>
