--- a/views/computerlabels.ejs
+++ b/views/computerlabels.ejs
@@ -14,9 +14,9 @@
         <p>1. High Strength </p>
         <p>2. Perfect Finish </p>
         <p>3. Superb Design </p>
-        <p>4. Light Weight </p>
+        <!-- <p>4. Light Weight </p> -->
         <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <!-- <p>6. Water Proof </p> -->
         <h3>Available:</h3>
         <p>1. 2/1 Inch </p>
         <p>2. 4/6 Inch </p>
