--- a/views/hololabels.ejs
+++ b/views/hololabels.ejs
@@ -13,10 +13,10 @@
         <h3>Features:</h3>
         <p>1. Beautiful Design </p>
         <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
+        <!-- <p>3. Lightweight </p> -->
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <!-- <p>6. Water Proof </p> -->
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
