--- a/views/scannerhardware.ejs
+++ b/views/scannerhardware.ejs
@@ -13,7 +13,7 @@
         <h3>Features:</h3>
         <p>1. Beautiful Design </p>
         <p>2. Fine Finish </p>
-        <p>3. Lightweight </p>
+        <!-- <p>3. Lightweight </p> -->
         <p>4. Easy To Use </p>
         <p>5. Different Sizes Available</p>
         <p>6. High Performance </p>
