--- a/views/taglabels.ejs
+++ b/views/taglabels.ejs
@@ -17,7 +17,7 @@
         <p>3. Various Shapes </p>
         <p>4. Attractive Design </p>
         <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
+        <!-- <p>6. Water Proof </p> -->
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
