--- a/views/thermalribbons.ejs
+++ b/views/thermalribbons.ejs
@@ -33,9 +33,9 @@
         <p class="text-justify">We Are Offering Awide Range Of Thermal Ribbons To Our Patrons. These Products Are Made From High Quality Components At Our Well-Equipped Manufacturing Unit. </p>
         <h3>Features:</h3>
         <p>1. Easy To Use </p>
-        <p>2. Crack Resistance </p>
-        <p>3. Attractive Design </p>
-        <p>4. Various Shapes </p>
+        <p>2. Scratch Resistance </p>
+        <!-- <p>3. Attractive Design </p> -->
+        <p>4. Various Sizes </p>
         <p>5. Multi Colors</p>
         <p>6. Water Proof </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
